kyverno-sidecar-injector-template-updated.yaml
---
# Source: kyverno-sidecar-injector/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyverno-sidecar-injector
  namespace: default
  labels:
    app.kubernetes.io/component: sidecar-injector
    app.kubernetes.io/instance: test-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: test-release-kyverno-sidecar-injector
    app.kubernetes.io/version: 0.0.0
    helm.sh/chart: kyverno-sidecar-injector-0.0.0
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    protocol: TCP
    appProtocol: https
    targetPort: https
  selector:
    app.kubernetes.io/component: sidecar-injector
    app.kubernetes.io/instance: test-release
    app.kubernetes.io/part-of: test-release-kyverno-sidecar-injector
---
# Source: kyverno-sidecar-injector/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyverno-sidecar-injector
  namespace: default
  labels:
    app.kubernetes.io/component: sidecar-injector
    app.kubernetes.io/instance: test-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: test-release-kyverno-sidecar-injector
    app.kubernetes.io/version: 0.0.0
    helm.sh/chart: kyverno-sidecar-injector-0.0.0
spec:
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 40%
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/component: sidecar-injector
      app.kubernetes.io/instance: test-release
      app.kubernetes.io/part-of: test-release-kyverno-sidecar-injector
  template:
    metadata:
      labels:
        app.kubernetes.io/component: sidecar-injector
        app.kubernetes.io/instance: test-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: test-release-kyverno-sidecar-injector
        app.kubernetes.io/version: 0.0.0
        helm.sh/chart: kyverno-sidecar-injector-0.0.0
    spec:
      dnsPolicy: ClusterFirst
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/component
                  operator: In
                  values:
                  - admission-controller
              topologyKey: kubernetes.io/hostname
            weight: 1
      serviceAccountName: kyverno-sidecar-injector
      volumes:
        - name: certs
          secret:
            secretName: kyverno-sidecar-injector
      containers:
        - name: injector
          image: ghcr.io/kyverno/kyverno-http-authorizer:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 384Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            failureThreshold: 20
            httpGet:
              path: /livez
              port: 9443
              scheme: HTTPS
            initialDelaySeconds: 2
            periodSeconds: 6
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /livez
              port: 9443
              scheme: HTTPS
            initialDelaySeconds: 15
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 6
            httpGet:
              path: /readyz
              port: 9443
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - containerPort: 9443
              name: https
              protocol: TCP
          args:
            - "serve"
            - "sidecar-injector"
            - "--address=:9443"
            - "--cert-file=/opt/kubernetes-sidecar-injector/certs/tls.crt"
            - "--key-file=/opt/kubernetes-sidecar-injector/certs/tls.key"
            - "--sidecar-image=ghcr.io/kyverno/kyverno-http-authorizer:latest"
            - "--control-plane-address="
            - "--control-plane-reconnect-wait=3s"
            - "--control-plane-max-dial-interval=8s"
            - "--health-check-interval=30s"
          volumeMounts:
            - name: certs
              mountPath: /opt/kubernetes-sidecar-injector/certs
              readOnly: true
---
# Source: kyverno-sidecar-injector/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kyverno-sidecar-injector
  labels:
    app.kubernetes.io/component: sidecar-injector
    app.kubernetes.io/instance: test-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: test-release-kyverno-sidecar-injector
    app.kubernetes.io/version: 0.0.0
    helm.sh/chart: kyverno-sidecar-injector-0.0.0
webhooks:
  - name: kyverno-sidecar-injector.default.svc
    clientConfig:
      service:
        name: kyverno-sidecar-injector
        namespace: default
        path: /mutate
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: [ v1 ]
    rules:
      - apiGroups: [ '' ]
        apiVersions: [ v1 ]
        resources: [ pods ]
        operations: [ CREATE ]
        scope: '*'
    namespaceSelector:
      matchExpressions:
      - key: kyverno-injection
        operator: In
        values:
        - enabled
